Bug 263335 - Speculation failure ValueProfile buckets should be lazy
Summary: Speculation failure ValueProfile buckets should be lazy
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Keith Miller
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-10-18 13:14 PDT by Keith Miller
Modified: 2023-10-20 20:58 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Keith Miller 2023-10-18 13:14:50 PDT
...
Comment 1 Radar WebKit Bug Importer 2023-10-18 13:23:27 PDT
<rdar://problem/117159824>
Comment 2 Keith Miller 2023-10-18 13:58:47 PDT
Pull request: https://github.com/WebKit/WebKit/pull/19247
Comment 3 EWS 2023-10-20 20:58:50 PDT
Committed 269612@main (eeb0d7b78c6d): <https://commits.webkit.org/269612@main>

Reviewed commits have been landed. Closing PR #19247 and removing active labels.