Source/JavaScriptCore/dfg/DFGPredictionInjectionPhase.cpp
@@ -55,7 +55,7 @@ public:
             auto& arguments = m_graph.m_rootToArguments.find(m_graph.block(0))->value;
 
             for (size_t arg = 0; arg < static_cast<size_t>(codeBlock()->numParameters()); ++arg) {
-                ValueProfile& profile = profiledBlock()->valueProfileForArgument(arg);
+                ArgumentValueProfile& profile = profiledBlock()->valueProfileForArgument(arg);
                 arguments[arg]->variableAccessData()->predict(profile.computeUpdatedPrediction(locker));
             }
         }
