JSTests/microbenchmarks/fold-multi-get-by-offset-to-get-by-offset.js
@@ -1,4 +1,5 @@
-//@ skip if $model == "Apple Watch Series 3" # added by mark-jsc-stress-test.py
+//@ skip if $model == "Apple Watch Series 3" or $addressBits <= 32
+
 function foo(o) {
     return o.f;
 }
